maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
        if(getIndication()== k){
                        ^